@@ -106,9 +106,6 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<configuration>
-						<!--<testFailureIgnore>true</testFailureIgnore>-->
-						<forkCount>0</forkCount> 
-						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
 						<includes>
 							<include>**/*Test.java</include>
 						</includes>
